build: add trace.h to Makefile
so `make distcheck` works fine.

Fixes: 8e03d59b5aa4 ("src: split monitor trace code into new trace.c")
Signed-off-by: Pablo Neira Ayuso <pablo@netfilter.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -99,6 +99,7 @@ noinst_HEADERS = \
 	include/socket.h \
 	include/statement.h \
 	include/tcpopt.h \
+	include/trace.h \
 	include/utils.h \
 	include/xfrm.h \
 	include/xt.h \
